base/virtualization/kubevmui/kubernetes/deploy/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubevmui
  namespace: kubevmui
  labels:
    app.kubernetes.io/name: kubevmui
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kubevmui
    app.kubernetes.io/component: backend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
